--- a/IMS.Application/Content/css/bootstrap-responsive.css
+++ b/IMS.Application/Content/css/bootstrap-responsive.css
@@ -10,7 +10,7 @@
 
 .clearfix {
   *zoom: 1;
-}
+}span
 
 .clearfix:before,
 .clearfix:after {
@@ -129,7 +129,7 @@
     width: 870px;
   }
   .span8 {
-    width: 770px;
+    /*width: 770px;*/ width: 560px;
   }
   .span7 {
     width: 670px;
