--- a/IMS.Application/Views/Account/LogOn.cshtml
+++ b/IMS.Application/Views/Account/LogOn.cshtml
@@ -1,48 +1,83 @@
 ﻿@model IMS.Application.Models.LogOnModel
-
 @{
     ViewBag.Title = "Log On";
 }
-
-<h2>Log On</h2>
-<p>
-    Please enter your user name and password. @Html.ActionLink("Register", "Register") if you don't have an account.
-</p>
-
-<script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
-
 @Html.ValidationSummary(true, "Login was unsuccessful. Please correct the errors and try again.")
+@{    
 
-@using (Html.BeginForm()) {
-    <div>
-        <fieldset>
-            <legend>Account Information</legend>
 
-            <div class="editor-label">
-                @Html.LabelFor(m => m.UserName)
+    if (Context.Request.PhysicalPath == "/Account/LogOn")
+    {    
+    <div class="content-wrap">
+        <div class="content register">
+            <div class="row">
+                <div class="span4">
+                    <div class="register-icon">
+                        <img src="../../Content/img/register-users.png" alt="" /></div>
+                </div>
+                <div class="span8">
+                    <h4>
+                        Account Information</h4>
+                    using (Html.BeginForm()) {
+                    <div class="login">
+                        <div class="editor-label">
+                            @Html.LabelFor(m => m.UserName)
+                        </div>
+                        <div class="editor-field">
+                            @Html.TextBoxFor(m => m.UserName)
+                            <br class="clearfix" />@Html.ValidationMessageFor(m => m.UserName)
+                        </div>
+                        <div class="editor-label">
+                            @Html.LabelFor(m => m.Password)
+                        </div>
+                        <div class="editor-field">
+                            @Html.PasswordFor(m => m.Password)
+                            <br class="clearfix" />@Html.ValidationMessageFor(m => m.Password)
+                        </div>
+                        <div class="editor-label">
+                            @Html.CheckBoxFor(m => m.RememberMe)
+                            @Html.LabelFor(m => m.RememberMe)
+                        </div>
+                        <p>
+                            <input class="btn btn-small btn-success" type="submit" onclick="fadeLoginErrors()"
+                                value="Login to ISM Admin Page" />
+                        </p>
+                    </div>
+                    }
+                </div>
             </div>
-            <div class="editor-field">
-                @Html.TextBoxFor(m => m.UserName)
-                @Html.ValidationMessageFor(m => m.UserName)
-            </div>
-
-            <div class="editor-label">
-                @Html.LabelFor(m => m.Password)
-            </div>
-            <div class="editor-field">
-                @Html.PasswordFor(m => m.Password)
-                @Html.ValidationMessageFor(m => m.Password)
-            </div>
-
-            <div class="editor-label">
-                @Html.CheckBoxFor(m => m.RememberMe)
-                @Html.LabelFor(m => m.RememberMe)
-            </div>
-
-            <p>
-                <input type="submit" value="Log On" />
-            </p>
-        </fieldset>
-    </div>
+        </div>
+    </div>        
+    }
+    else
+    {
+        
+        using (Html.BeginForm())
+        { 
+    <div class="login">
+        <div class="editor-label">
+            @Html.LabelFor(m => m.UserName)
+        </div>
+        <div class="editor-field">
+            @Html.TextBoxFor(m => m.UserName)
+            <br class="clearfix" />@Html.ValidationMessageFor(m => m.UserName)
+        </div>
+        <div class="editor-label">
+            @Html.LabelFor(m => m.Password)
+        </div>
+        <div class="editor-field">
+            @Html.PasswordFor(m => m.Password)
+            <br class="clearfix" />@Html.ValidationMessageFor(m => m.Password)
+        </div>
+        <div class="editor-label">
+            @Html.CheckBoxFor(m => m.RememberMe)
+            @Html.LabelFor(m => m.RememberMe)
+        </div>
+        <p>
+            <input class="btn btn-small btn-success" type="submit" onclick="fadeLoginErrors()"
+                value="Login to ISM Admin Page" />
+        </p>
+    </div> 
+        }
+    }
 }
