--- a/IMS.Application/Views/Account/Register.cshtml
+++ b/IMS.Application/Views/Account/Register.cshtml
@@ -1,61 +1,66 @@
 ﻿@model IMS.Application.Models.RegisterModel
-
 @{
     ViewBag.Title = "Register";
 }
-
-<h2>Create a New Account</h2>
-<p>
-    Use the form below to create a new account. 
-</p>
-<p>
-    Passwords are required to be a minimum of @Membership.MinRequiredPasswordLength characters in length.
-</p>
-
-<script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
-
-@using (Html.BeginForm()) {
-    @Html.ValidationSummary(true, "Account creation was unsuccessful. Please correct the errors and try again.")
-    <div>
-        <fieldset>
-            <legend>Account Information</legend>
-
-            <div class="editor-label">
-                @Html.LabelFor(m => m.UserName)
+<div class="content-wrap">
+    <div class="content register">
+        <div class="row">
+            <div class="span4">
+                <div class="register-icon">
+                    <img src="../../Content/img/register-users.png" alt="" /></div>
             </div>
-            <div class="editor-field">
-                @Html.TextBoxFor(m => m.UserName)
-                @Html.ValidationMessageFor(m => m.UserName)
+            <div class="span8">
+                <h3 class="clr-blue">
+                    Create a New Account</h3>
+                <p>
+                    Use the form below to create a new account. <br />Passwords are required to be a minimum of @Membership.MinRequiredPasswordLength
+                    characters in length.
+                </p>
+                <div class="register-form">
+                @using (Html.BeginForm())
+                {
+                    @Html.ValidationSummary(true, "Account creation was unsuccessful. Please correct the errors and try again.")
+                    <div class="form-wrap">
+                        <fieldset>
+                            <legend>Account Information</legend>
+                            <div class="editor-label">
+                                @Html.LabelFor(m => m.UserName)
+                            </div>
+                            <div class="editor-field">
+                                @Html.TextBoxFor(m => m.UserName)
+                                @Html.ValidationMessageFor(m => m.UserName)
+                            </div>
+                            <div class="editor-label">
+                                @Html.LabelFor(m => m.Email)
+                            </div>
+                            <div class="editor-field">
+                                @Html.TextBoxFor(m => m.Email)
+                                @Html.ValidationMessageFor(m => m.Email)
+                            </div>
+                            <div class="editor-label">
+                                @Html.LabelFor(m => m.Password)
+                            </div>
+                            <div class="editor-field">
+                                @Html.PasswordFor(m => m.Password)
+                                @Html.ValidationMessageFor(m => m.Password)
+                            </div>
+                            <div class="editor-label">
+                                @Html.LabelFor(m => m.ConfirmPassword)
+                            </div>
+                            <div class="editor-field">
+                                @Html.PasswordFor(m => m.ConfirmPassword)
+                                @Html.ValidationMessageFor(m => m.ConfirmPassword)
+                            </div>
+                            <p class="padtop15">
+                                
+                                <button class="btn btn-block btn-success" onclick="fadeRegisterErrors()" type="submit">Register New User</button>
+                            </p>
+                        </fieldset>
+                    </div>
+                }
+                </div>
             </div>
-
-            <div class="editor-label">
-                @Html.LabelFor(m => m.Email)
-            </div>
-            <div class="editor-field">
-                @Html.TextBoxFor(m => m.Email)
-                @Html.ValidationMessageFor(m => m.Email)
-            </div>
-
-            <div class="editor-label">
-                @Html.LabelFor(m => m.Password)
-            </div>
-            <div class="editor-field">
-                @Html.PasswordFor(m => m.Password)
-                @Html.ValidationMessageFor(m => m.Password)
-            </div>
-
-            <div class="editor-label">
-                @Html.LabelFor(m => m.ConfirmPassword)
-            </div>
-            <div class="editor-field">
-                @Html.PasswordFor(m => m.ConfirmPassword)
-                @Html.ValidationMessageFor(m => m.ConfirmPassword)
-            </div>
-
-            <p>
-                <input type="submit" value="Register" />
-            </p>
-        </fieldset>
+        </div>
     </div>
-}
+</div>
+
