--- a/IMS.Application/Views/Shared/_Layout.cshtml
+++ b/IMS.Application/Views/Shared/_Layout.cshtml
@@ -30,6 +30,8 @@
   <body>
 
     <script src="@Url.Content("~/Scripts/bootstrap/jquery.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/bootstrap/bootstrap-alert.js")" type="text/javascript"></script>            
     <script src="@Url.Content("~/Scripts/bootstrap/bootstrap-button.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/bootstrap/bootstrap-carousel.js")" type="text/javascript"></script>
@@ -42,9 +44,10 @@
     <script src="@Url.Content("~/Scripts/bootstrap/bootstrap-tooltip.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/bootstrap/bootstrap-transition.js")" type="text/javascript"></script>
     <script src="@Url.Content("~/Scripts/bootstrap/bootstrap-typeahead.js")" type="text/javascript"></script>
+    @Html.Partial("_Header")
     @RenderBody()
-   
-
+    @Html.Partial("_Footer")
+    <script src="@Url.Content("~/Scripts/Request/global.js")" type="text/javascript"></script>
 </body></html>
 
 
